Form: fix icon alignment
Icon was misplaced on dialog header.
Icon was slightly misaligned in tab.
Also increased icon size a little for dialogs.

--- a/eclipse-scout-core/src/form/Form.less
+++ b/eclipse-scout-core/src/form/Form.less
@@ -109,11 +109,14 @@
   }
 
   & > .icon-container {
+    float: left;
+
     & > .icon {
-      margin-right: 5px;
+      margin-right: 6px;
+      vertical-align: middle;
 
       &.font-icon {
-        font-size: 14px;
+        font-size: 16px;
       }
     }
   }
