--- a/eclipse-scout-core/src/tabbox/SimpleTab.less
+++ b/eclipse-scout-core/src/tabbox/SimpleTab.less
@@ -28,10 +28,10 @@
     }
 
     & > .icon-container {
+      display: flex; // Makes container as height as icon inside which improves alignment (title-line has flex box layout)
 
       & > .icon {
-        margin-right: 5px;
-        vertical-align: middle;
+        margin-right: 6px;
 
         &.font-icon {
           font-size: 14px;
